--- a/Estacionamento/src/view/JFCadastrarVaga.form
+++ b/Estacionamento/src/view/JFCadastrarVaga.form
@@ -49,7 +49,8 @@
     </Container>
   </NonVisualComponents>
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
+    <Property name="title" type="java.lang.String" value="Cadastrar Vaga"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -130,8 +131,8 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jBtnCancelar" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jBtnLimpar" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jBtnSalvar" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jBtnLimpar" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="29" max="32767" attributes="0"/>
           </Group>
